--- a/tariq.html
+++ b/tariq.html
@@ -10,7 +10,6 @@
 <body>
 
     THis is my testing for khadija to pull my changes
-
-</body>
+    </br>THis is my testing for namira to pull my changes </body>
 
 </html>
