ADD JS AND CSS LINKS TO THE HTML PAGE

--- a/Pattol.html
+++ b/Pattol.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style/index.css">
+    <link rel="stylesheet" type="text/+js" href="script/javaScript.js">
+    <title>HOME</title>
 </head>
 
 <body>
 
     </br>Hi This is Pattol </body>
-    lsdfsdfs
 
 </html>
