I add a smantic element

--- a/Pattol.html
+++ b/Pattol.html
@@ -8,9 +8,30 @@
     <link rel="stylesheet" type="text/+js" href="script/javaScript.js">
     <title>HOME</title>
 </head>
-
 <body>
 
-    </br>Hi This is Pattol </body>
+<header>
 
+
+</header>
+<nav>
+
+
+</nav>
+<section>
+<article>
+
+
+</article>
+<article>
+
+
+</article>
+</section>
+<footer>
+
+
+    
+</footer>
+</body>
 </html>
