--- a/Pattol.html
+++ b/Pattol.html
@@ -9,10 +9,11 @@
     <title>HOME</title>
 </head>
 <body>
-
 <header>
-
-
+    <img src=" " alt=" "> <!-- image logo here  -->
+    <a href="logIn.html">log In</a>
+    <a href="register.html">register</a>
+    <a href="url">ENG/FR</a>
 </header>
 <nav>
 
@@ -31,7 +32,7 @@
 <footer>
 
 
-    
+
 </footer>
 </body>
 </html>
