some outline for index page

--- a/Pattol.html
+++ b/Pattol.html
@@ -17,21 +17,24 @@
 </header>
 <nav>
 
+    <!-- Categories, sales, Search bar, and cart-->
 
 </nav>
 <section>
 <article>
 
+    <!-- image slideshow -->
 
 </article>
 <article>
 
+    <!-- Story about the website​ -->
 
 </article>
 </section>
 <footer>
 
-
+    <!-- social media -->
 
 </footer>
 </body>
