--- a/Pattol.html
+++ b/Pattol.html
@@ -10,10 +10,13 @@
 </head>
 <body>
 <header>
-    <img src=" " alt=" "> <!-- image logo here  -->
-    <a href="logIn.html">log In</a>
-    <a href="register.html">register</a>
-    <a href="url">ENG/FR</a>
+    <ul>
+        <li><a href="logIn.html">log In</a></li>
+        <li><a href="register.html">register</a></li>
+        <li><a href="url">ENG/FR</a></li>
+        <li><a href="url">HELP</a> <!-- USING COOKIE TRACKING --></li>
+      </ul>
+      <img class="logo" src=" " alt=" "> <!-- image logo here  -->
 </header>
 <nav>
 
