--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Online Shop</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
+<div class="subheader">
+    <select name="languages" id="languages">
+        <option value="languageFr">Fr</option>
+        <option value="languageEn">En</option>
+    </select>
+    <div class="registration">Register</div>
+    <div class="logIn">Log In</div>
+</div>
+<div class="header">
+    <div class="categories">Categories</div>
+    <div class="sales">Sales</div>
+    <div class="searchArea">Search</div>
+    <div class="cart">Cart</div>
+    <div class="wrap">
+        <div class="search">
+            <input type="text" class="searchTerm" placeholder="What are you looking for?">
+            <button type="submit" class="searchButton">
+                <i class="fa fa-search"></i>
+            </button>
 
+        </div>
+
+    </div>
+</div>
 
 <body>
-    <h1>Testing the first git commit and push</h1>
+
+    <footer>
+        <div class="subfooter">
+            <table>
+                <tr class="title">
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr class="story">
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+        <div class="footer">
+            <div class="contact">Contact Us</div>
+            <div class="FollowUs">Follow Us</div>
+        </div>
+    </footer>
 </body>
+
 
 </html>
