Tariq_all_categoriesPages

--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -17,97 +17,111 @@
 
         <div class="myheader">
             <div class="logo">
-                <img src="images/logo1.png" alt="our Logo" id="logo">
+                <a href="index1.html"> <img src="images/logo1.png" alt="our Logo" id="logo"></a>
             </div>
             <div class="header">
                 <ul>
-                    <li class="categories"><a href="categories"> Categories</a></li>
-                    <li class="sales"><a href="sales">Sales</a></li>
-                    <li class="cart"><a href="cart">Cart</a></li>
-                    <li class="searchArea"><a href="search">Search</a></li>
+                    <li>Categories
+                        <ul>
+                            <li>
+                                <a href="Shoes.html">Shoes</a>
+                            </li>
+                            <li>
+                                <a href=" ">Clothes</a>
+                            </li>
+                            <li>
+                                <a href=" ">Accesories</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+
+                </li>
+                <li class="sales "><a href="sales ">Sales</a></li>
+                <li class="cart "><a href="cart ">Cart</a></li>
+                <li class="searchArea "><a href="search ">Search</a></li>
                 </ul>
             </div>
-            <div class="subheader" id="subheader">
+            <div class="subheader " id="subheader ">
                 <ul>
 
-                    <li class="registration"><a href="register">Register</a></li>
-                    <li class="logIn"><a href="log">Log In</a></li>
+                    <li class="registration "><a href="register ">Register</a></li>
+                    <li class="logIn "><a href="log ">Log In</a></li>
                     <li>
-                        <select name="languages" id="languages">
-                            <option value="languageFr">Fr</option>
-                            <option value="languageEn">En</option>
+                        <select name="languages " id="languages ">
+                            <option value="languageFr ">Fr</option>
+                            <option value="languageEn ">En</option>
                         </select>
                     </li>
-                    <li> <button id="light" type="light" onclick="changemode(light)">Light</button> </li>
-                    <li> <button id="dark" type="dark" onclick="changemode(dark)">Dark</button> </li>
+                    <li> <button id="light " type="light " onclick="changemode(light) ">Light</button> </li>
+                    <li> <button id="dark " type="dark " onclick="changemode(dark) ">Dark</button> </li>
                 </ul>
 
             </div>
 
         </div>
 
-        <div class="slideshow" class="bigimage">
+        <div class="slideshow " class="bigimage ">
 
-            <div class="mySlides fade">
-                <img src="images/AdobeStock_284305436.jpeg" alt="sport image">
-                <div class="text">Caption Text</div>
+            <div class="mySlides fade ">
+                <img src="images/AdobeStock_284305436.jpeg " alt="sport image ">
+                <div class="text ">Caption Text</div>
             </div>
 
-            <div class="mySlides fade">
-                <img src="images/AdobeStock_163398716.jpeg" alt="">
-                <div class="text">Caption Two</div>
+            <div class="mySlides fade ">
+                <img src="images/AdobeStock_163398716.jpeg " alt=" ">
+                <div class="text ">Caption Two</div>
             </div>
 
-            <div class="mySlides fade">
-                <img src="images/AdobeStock_172291957.jpeg" alt="">
-                <div class="text">Caption Three</div>
+            <div class="mySlides fade ">
+                <img src="images/AdobeStock_172291957.jpeg " alt=" ">
+                <div class="text ">Caption Three</div>
             </div>
 
-            <a class="prev" onmouseover="plusSlides(-1)">&#10094;</a>
-            <a class="next" onmouseover="plusSlides(1)">&#10095;</a>
+            <a class="prev " onmouseover="plusSlides(-1) ">&#10094;</a>
+            <a class="next " onmouseover="plusSlides(1) ">&#10095;</a>
         </div>
     </div>
 
     <main>
 
 
-
     </main>
-    <button class="open-button" id="open-button" onclick="openForm()">Chat</button>
+    <button class="open-button " id="open-button " onclick="openForm() ">Chat</button>
 
-    <div class="chat-popup" id="myForm">
-        <form action="/action_page.php" class="form-container">
+    <div class="chat-popup " id="myForm ">
+        <form action="/action_page.php " class="form-container ">
             <h1>Chat</h1>
 
-            <label for="msg"><b></b></label>
-            <textarea placeholder="Type message.." name="msg" required></textarea>
+            <label for="msg "><b></b></label>
+            <textarea placeholder="Type message.. " name="msg " required></textarea>
 
-            <button type="submit" class="btn">Send</button>
-            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+            <button type="submit " class="btn ">Send</button>
+            <button type="button " class="btn cancel " onclick="closeForm() ">Close</button>
         </form>
     </div>
 
     <footer>
-        <div class="subfooter">
+        <div class="subfooter ">
             <table>
-                <tr class="title">
+                <tr class="title ">
                     <td></td>
                     <td></td>
                 </tr>
-                <tr class="story">
+                <tr class="story ">
                     <td></td>
                     <td></td>
                 </tr>
             </table>
         </div>
-        <div class="footer">
-            <div class="contact">Contact Us</div>
-            <div class="FollowUs">Follow Us</div>
+        <div class="footer ">
+            <div class="contact ">Contact Us</div>
+            <div class="FollowUs ">Follow Us</div>
         </div>
     </footer>
 
 
-    <script src="code.js"></script>
+    <script src="code.js "></script>
 </body>
 
 
