--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -45,8 +45,8 @@
             <div class="subheader " id="subheader ">
                 <ul>
 
-                    <li class="registration "><a href="register ">Register</a></li>
-                    <li class="logIn "><a href="log ">Log In</a></li>
+                    <li class="registration "><a href="register.html">Register</a></li>
+                    <li class="logIn "><a href="logIn.html">Log In</a></li>
                     <li>
                         <select name="languages " id="languages ">
                             <option value="languageFr ">Fr</option>
