--- a/khaproject/Shoes.html
+++ b/khaproject/Shoes.html
@@ -70,51 +70,10 @@
 
 
     <main>
-        <div class=" categories ">
+        <div class="categories ">
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Perfume Pic1 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Wow Perfume</p>
-                    <p><b>Price:</b> $14.99USD</p>
-                    <p><b>Product#</b> 001122</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-
-            </div>
-            <div class=" card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic2 ">
-
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Amazing Perfume</p>
-                    <p><b>Price:</b> <strike>$20.99USD</strike> $14.99USD</p>
-                    <p><b>Product#</b> 001133</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
-
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic3 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Sweet Perfume</p>
-                    <p><b>Price:</b> $19.99USD</p>
-                    <p><b>Product#</b> 001144</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
-
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic4 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Crazy Smell</p>
-                    <p><b>Price:</b> $9.99USD</p>
-                    <p><b>Product#</b> 001155</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
-
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic5 ">
+                <img class=" prodSize " src="images/shoes/running-shoes-pair-over-white-background-53785563.jpg" alt=" Male Perfume Pic5 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Nice Perfume</p>
                     <p><b>Price:</b> $30.00USD</p>
@@ -124,7 +83,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic6 ">
+                <img class=" prodSize " src="images/shoes/shoes-footwear-hiking-shoes-walking-40662.jpeg" alt=" Male Perfume Pic6 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Boss of Perfumes</p>
                     <p><b>Price:</b> $99.99USD</p>
@@ -134,7 +93,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic7 ">
+                <img class=" prodSize " src="images/shoes/sport-shoe-4522842.jpg" alt=" Male Perfume Pic7 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> No Compare Perfume</p>
                     <p><b>Price:</b> <strike>$20.49USD</strike> $14.49USD</p>
@@ -144,7 +103,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic8 ">
+                <img class=" prodSize " src="images/shoes/sport-shoe-9332341.jpg" alt=" Male Perfume Pic8 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Perfect Show</p>
                     <p><b>Price:</b> $25.50USD</p>
@@ -154,27 +113,8 @@
 
             </div>
 
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic9 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Soft But Strong</p>
-                    <p><b>Price:</b> $5.99USD</p>
-                    <p><b>Product#</b> 0011011</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
 
-            </div>
 
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic10 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Fresh Wood</p>
-                    <p><b>Price:</b> $135.00USD</p>
-                    <p><b>Product#</b> 0011022</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-
-            </div>
         </div>
 
     </main>
