--- a/khaproject/clothes.html
+++ b/khaproject/clothes.html
@@ -43,24 +43,24 @@
                         </ul>
                     </li>
                 </ul>
-                <li class=" sales "><a href="sales.html">Sales</a></li>
-                <li class=" cart "><a href=" cart ">Cart</a></li>
-                <li class=" searchArea "><a href=" search ">Search</a></li>
+                <li class="sales"><a href="sales.html">Sales</a></li>
+                <li class="cart"><a href="cart">Cart</a></li>
+                <li class="searchArea"><a href="search">Search</a></li>
                 </ul>
             </div>
-            <div class=" subheader " id=" subheader ">
+            <div class="subheader" id="subheader">
                 <ul>
 
-                    <li class=" registration "><a href=" register ">Register</a></li>
-                    <li class=" logIn "><a href=" log ">Log In</a></li>
+                    <li class="registration"><a href="register">Register</a></li>
+                    <li class="logIn"><a href="log">Log In</a></li>
                     <li>
-                        <select name=" languages " id=" languages ">
-                            <option value=" languageFr ">Fr</option>
-                            <option value=" languageEn ">En</option>
+                        <select name="languages" id="languages">
+                            <option value="languageFr">Fr</option>
+                            <option value="languageEn">En</option>
                         </select>
                     </li>
-                    <li> <button id=" light " type=" light " onclick=" changemode(light) ">Light</button> </li>
-                    <li> <button id=" dark " type=" dark " onclick=" changemode(dark) ">Dark</button> </li>
+                    <li> <button id="light" type="light" onclick=" changemode(light) ">Light</button> </li>
+                    <li> <button id="dark" type="dark" onclick=" changemode(dark) ">Dark</button> </li>
                 </ul>
 
             </div>
@@ -70,11 +70,11 @@
 
 
     <main>
-        <div class=" categories ">
+        <div class="categories">
 
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Perfume Pic1 ">
-                <div class=" card-text ">
+            <div class="card">
+                <img class="prodSize" src="images/sports Clothes/hooded-sweater-16286906.jpg" alt="hooded-sweater">
+                <div class="card-text">
                     <p><b>Product Name:</b> Wow Perfume</p>
                     <p><b>Price:</b> $14.99USD</p>
                     <p><b>Product#</b> 001122</p>
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class=" card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic2 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-1040421.jpeg" alt=" Male Perfume Pic2 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Amazing Perfume</p>
                     <p><b>Price:</b> <strike>$20.99USD</strike> $14.99USD</p>
@@ -92,7 +92,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic3 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-1040424.jpeg" alt=" Male Perfume Pic3 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Sweet Perfume</p>
                     <p><b>Price:</b> $19.99USD</p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic4 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-1103828.jpeg" alt=" Male Perfume Pic4 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Crazy Smell</p>
                     <p><b>Price:</b> $9.99USD</p>
@@ -112,7 +112,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic5 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-3761215.jpeg" alt=" Male Perfume Pic5 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Nice Perfume</p>
                     <p><b>Price:</b> $30.00USD</p>
@@ -122,7 +122,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic6 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-4056529.jpeg" alt=" Male Perfume Pic6 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Boss of Perfumes</p>
                     <p><b>Price:</b> $99.99USD</p>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic7 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-4939433.jpeg" alt=" Male Perfume Pic7 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> No Compare Perfume</p>
                     <p><b>Price:</b> <strike>$20.49USD</strike> $14.49USD</p>
@@ -142,7 +142,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic8 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-4953499.jpeg" alt=" Male Perfume Pic8 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Perfect Show</p>
                     <p><b>Price:</b> $25.50USD</p>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic9 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-5869022.jpeg" alt=" Male Perfume Pic9 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Soft But Strong</p>
                     <p><b>Price:</b> $5.99USD</p>
@@ -162,7 +162,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic10 ">
+                <img class=" prodSize " src="images/sports Clothes/pexels-photo-936075.jpeg" alt=" Male Perfume Pic10 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Fresh Wood</p>
                     <p><b>Price:</b> $135.00USD</p>
@@ -170,6 +170,7 @@
                     <a class="btn btn-success" href="#" role="button">Add to cart</a>
                 </div>
             </div>
+
         </div>
 
     </main>
