--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -27,22 +27,25 @@
                                 <a href="Shoes.html">Shoes</a>
                             </li>
                             <li>
-                                <a href=" ">Clothes</a>
+                                <a href="clothes.html">Clothes</a>
                             </li>
                             <li>
-                                <a href=" ">Accesories</a>
+                                <a href="accessories.html">Accesories</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
 
                 </li>
-                <li class="sales "><a href="sales ">Sales</a></li>
-                <li class="cart "><a href="cart ">Cart</a></li>
-                <li class="searchArea "><a href="search ">Search</a></li>
+                <li class="sales"><a href="sales">Sales</a></li>
+                <li class="searchArea"><a href="search">Search</a></li>
+                <li class="cart"><a img="image">Cart</a></li>
+                <li class="cart-item"><a href="cart">0</a>
+                </li>
+
                 </ul>
             </div>
-            <div class="subheader " id="subheader ">
+            <div class="subheader" id="subheader ">
                 <ul>
 
                     <li class="registration "><a href="register.html">Register</a></li>
