--- a/khaproject/Shoes.html
+++ b/khaproject/Shoes.html
@@ -44,9 +44,10 @@
                     </li>
                 </ul>
                 <li class=" sales "><a href="sales.html">Sales</a></li>
-                <li class=" cart "><a href=" cart ">Cart</a></li>
                 <li class=" searchArea "><a href=" search ">Search</a></li>
-                </ul>
+                <li class="cart"><a href="cart.html">Cart</a></li>
+                <li class="cart-item"><a href="cart">0</a>
+                    </ul>
             </div>
             <div class=" subheader " id=" subheader ">
                 <ul>
