--- a/khaproject/accessories.html
+++ b/khaproject/accessories.html
@@ -44,9 +44,10 @@
                     </li>
                 </ul>
                 <li class=" sales "><a href="sales.html">Sales</a></li>
-                <li class=" cart "><a href=" cart ">Cart</a></li>
                 <li class=" searchArea "><a href=" search ">Search</a></li>
-                </ul>
+                <li class="cart"><a href="cart.html">Cart</a></li>
+                <li class="cart-item"><a href="cart">0</a>
+                    </ul>
             </div>
             <div class=" subheader " id=" subheader ">
                 <ul>
@@ -73,7 +74,7 @@
         <div class=" categories ">
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Perfume Pic1 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-1103829.jpeg" alt=" Perfume Pic1 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Wow Perfume</p>
                     <p><b>Price:</b> <strike>$14.99USD</strike> <span class="spanBlink blink"><b>$7.49USD</b></span></p>
@@ -84,7 +85,7 @@
                 <h3 class="blink">Clearance Sale: 50% Off</h3>
             </div>
             <div class=" card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic2 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-1539598.jpeg" alt=" Male Perfume Pic2 ">
 
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Amazing Perfume</p>
@@ -96,7 +97,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic3 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-4663829.jpeg" alt=" Male Perfume Pic3 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Sweet Perfume</p>
                     <p><b>Price:</b> <strike>$19.99USD</strike> <span class="spanBlink blink"><b>$9.99USD</b></span></p>
@@ -107,7 +108,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic4 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-4792314.jpeg" alt=" Male Perfume Pic4 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Crazy Smell</p>
                     <p><b>Price:</b> <strike>$9.99USD</strike> <span class="spanBlink blink"><b>$4.99USD</b></span></p>
@@ -118,7 +119,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic5 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-5369426.jpeg" alt=" Male Perfume Pic5 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Nice Perfume</p>
                     <p><b>Price:</b> $30.00USD</p>
@@ -128,7 +129,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic6 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-5792837.jpeg" alt=" Male Perfume Pic6 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Boss of Perfumes</p>
                     <p><b>Price:</b> $99.99USD</p>
@@ -138,7 +139,7 @@
             </div>
 
             <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic7 ">
+                <img class=" prodSize " src="images/Accessories/pexels-photo-1103829.jpeg" alt=" Male Perfume Pic7 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> No Compare Perfume</p>
                     <p><b>Price:</b> <strike>$20.49USD</strike> $14.49USD</p>
@@ -147,35 +148,7 @@
                 </div>
             </div>
 
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic8 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Perfect Show</p>
-                    <p><b>Price:</b> $25.50USD</p>
-                    <p><b>Product#</b> 001199</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
 
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic9 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Soft But Strong</p>
-                    <p><b>Price:</b> $5.99USD</p>
-                    <p><b>Product#</b> 0011011</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
-
-            <div class="card ">
-                <img class=" prodSize " src=" images/femalePic3.jpg " alt=" Male Perfume Pic10 ">
-                <div class=" card-text ">
-                    <p><b>Product Name:</b> Fresh Wood</p>
-                    <p><b>Price:</b> $135.00USD</p>
-                    <p><b>Product#</b> 0011022</p>
-                    <a class="btn btn-success" href="#" role="button">Add to cart</a>
-                </div>
-            </div>
         </div>
 
     </main>
