--- a/khaproject/clothes.html
+++ b/khaproject/clothes.html
@@ -44,9 +44,10 @@
                     </li>
                 </ul>
                 <li class="sales"><a href="sales.html">Sales</a></li>
-                <li class="cart"><a href="cart">Cart</a></li>
                 <li class="searchArea"><a href="search">Search</a></li>
-                </ul>
+                <li class="cart"><a href="cart.html">Cart</a></li>
+                <li class="cart-item"><a href="cart">0</a>
+                    </ul>
             </div>
             <div class="subheader" id="subheader">
                 <ul>
@@ -81,7 +82,7 @@
                     <a class="btn btn-success" href="#" role="button">Add to cart</a>
                 </div>
             </div>
-            <div class=" card ">
+            <div class="card">
                 <img class=" prodSize " src="images/sports Clothes/pexels-photo-1040421.jpeg" alt=" Male Perfume Pic2 ">
                 <div class=" card-text ">
                     <p><b>Product Name:</b> Amazing Perfume</p>
