--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -39,16 +39,15 @@
                 </li>
                 <li class="sales"><a href="sales">Sales</a></li>
                 <li class="searchArea"><a href="search">Search</a></li>
-                <li class="cart"><a img="image">Cart</a></li>
+                <li class="cart"><a href="cart.html">Cart</a></li>
                 <li class="cart-item"><a href="cart">0</a>
                 </li>
-
                 </ul>
             </div>
             <div class="subheader" id="subheader ">
                 <ul>
 
-                    <li class="registration "><a href="register.html">Register</a></li>
+                    <li class="registration"><a href="register.html">Register</a></li>
                     <li class="logIn "><a href="logIn.html">Log In</a></li>
                     <li>
                         <select name="languages " id="languages ">
