--- a/khaproject/cart.html
+++ b/khaproject/cart.html
@@ -90,8 +90,8 @@
                         </div>
                     </td>
 
-                    <td><input type="number" value="1"></td>
-                    <td>$50.00</td>
+                    <td><input id="q-1" type="number" onclick="inputClick(this)" value="1"></td>
+                    <td id="p-1">$50.00</td>
                 </tr>
                 <tr>
                     <td>
@@ -105,8 +105,8 @@
                         </div>
                     </td>
 
-                    <td><input type="number" value="1"></td>
-                    <td>$50.00</td>
+                    <td><input id="q-2" type="number" onclick="inputClick(this)" value="1"></td>
+                    <td id="p-2">$50.00</td>
                 </tr>
                 <tr>
                     <td>
@@ -120,8 +120,8 @@
                         </div>
                     </td>
 
-                    <td><input type="number" value="1"></td>
-                    <td>$50.00</td>
+                    <td><input id="q-3" type="number" onclick="inputClick(this)" value="1"></td>
+                    <td id="p-3">$50.00</td>
                 </tr>
 
             </table>
@@ -129,19 +129,18 @@
                 <table>
                     <tr>
                         <td>Subtotal</td>
-                        <td>200.00$</td>
+                        <td id="sub">200.00$</td>
                     </tr>
                     <tr>
                         <td>Tax</td>
-                        <td>35.00$</td>
+                        <td id="tx">35.00$</td>
                     </tr>
                     <tr>
                         <td>Total</td>
-                        <td>230.00$</td>
+                        <td id="tot">230.00$</td>
                     </tr>
                 </table>
             </div>
-        </div>
 
 
 
