--- a/logIn.html
+++ b/logIn.html
@@ -82,10 +82,10 @@
                     </form>
                 </div>
                 <footer>
-                    <div class="footer">
+                    <!-- <div class="footer">
                         <div class="contact">Contact Us</div>
                         <div class="FollowUs">Follow Us</div>
-                    </div>
+                    </div> -->
                 </footer>
             </body>
             </html>
