--- a/register.html
+++ b/register.html
@@ -27,14 +27,14 @@
                         </div>
                         <div class="subheader" id="subheader">
                             <ul>
-                                <li class="registration"><a href="register.html">Register</a></li>
+                                <li class="registration"><a href="khaproject/index1.html">home</a></li>
                                 <li class="logIn"><a href="logIn.html">Log In</a></li>
-                                <li>
+                                <!-- <li>
                                     <select name="languages" id="languages">
                                         <option value="languageFr">Fr</option>
                                         <option value="languageEn">En</option>
                                     </select>
-                                </li>
+                                </li> -->
                                 <li> <button id="light" type="light" onclick="changemode(light)">Light</button> </li>
                                 <li> <button id="dark" type="dark" onclick="changemode(dark)">Dark</button> </li>
                             </ul>
@@ -98,10 +98,10 @@
                     </form>
                 </div>
                 <footer>
-                    <div class="footer">
+                    <!-- <div class="footer">
                         <div class="contact">Contact Us</div>
                         <div class="FollowUs">Follow Us</div>
-                    </div>
+                    </div> -->
                 </footer>
             </body>
             </html>
