--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -4,126 +4,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports Canada</title>
+    <title>8117-Team Canada</title>
     <link rel="stylesheet" href="index1.css">
 </head>
 
 <body>
     <div class="container">
+        <div class="stickyheader">
+            <div class="banner" id="changeBanner">
+                Free shipping for orders over 100$
+            </div>
 
-        <div class="banner" id="changeBanner">
-            Free shipping for orders over 100$
+            <div class="mode">
+                <button id="light" type="light" onclick="changemode(light)">Light</button>
+                <button id="dark" type="dark" onclick="changemode(dark)">Dark</button>
+            </div>
+
+            <div class="myheader">
+
+                <div class="logo">
+                    <img src="images/logo1 - Copy.png" alt="our Logo" id="logo">
+                </div>
+                <div class="header">
+                    <ul>
+                        <li class=""><a href="">CLOTHES</a></li>
+                        <li class=""><a href="">SHOES</a></li>
+                        <li class=""><a href="">ACCESSORIES</a></li>
+                        <li class=""><a href="">SALES</a></li>
+                          
+                    </ul>
+                </div>
+                <div class="subheader" id="subheader">
+                    <ul>
+                        <li class="searchArea"><a href="search">Search</a></li>
+                        <li class="registration"><a href="register">Register</a></li>
+                        <li class="logIn"><a href="log">Log In</a></li>
+                        <li class="cart"><a href="cart">Cart</a></li> 
+                    </ul>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="slideshow">
+
+            <div class="mySlides fade">
+                <img src="images/AdobeStock_284305436.jpeg" alt="player" class="bigimage">
+                <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/AdobeStock_163398716.jpeg" alt="sport" class="bigimage">
+                <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+                <img src="images/AdobeStock_172291957.jpeg" alt="sport" class="bigimage">
+                <div class="text">Caption Three</div>
+            </div>
+
+            <a class="prev" onmouseover="plusSlides(-1)">&#10094;</a>
+            <a class="next" onmouseover="plusSlides(1)">&#10095;</a>
         </div>
 
-        <div class="myheader">
-            <div class="logo">
-                <a href="index1.html"> <img src="images/logo1.png" alt="our Logo" id="logo"></a>
-            </div>
-            <div class="header">
-                <ul>
-                    <li>Categories
-                        <ul>
-                            <li>
-                                <a href="Shoes.html">Shoes</a>
-                            </li>
-                            <li>
-                                <a href="clothes.html">Clothes</a>
-                            </li>
-                            <li>
-                                <a href="accessories.html">Accesories</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+        <div class="main">
+            <section class="section1">
+                <div><img src="images/AdobeStock_232218973.jpeg" alt="sport" id="sectionimg1"> </div>
+                <div id="sectiontxt1">LIMITED TIME OFFER </div>
+            </section>
+            <section id="section2">
+                <div id="sectiontxt2"></div>
+                <div><img src="images/AdobeStock_336883999.jpeg" alt="sport" id="sectionimg2"></div>
+            </section>
 
-                </li>
-                <li class="sales"><a href="sales">Sales</a></li>
-                <li class="searchArea"><a href="search">Search</a></li>
-                <li class="cart"><a href="cart.html">Cart</a></li>
-                <li class="cart-item"><a href="cart">0</a>
-                </li>
-                </ul>
-            </div>
-            <div class="subheader" id="subheader ">
-                <ul>
-
-                    <li class="registration"><a href="register.html">Register</a></li>
-                    <li class="logIn "><a href="logIn.html">Log In</a></li>
-                    <li>
-                        <select name="languages " id="languages ">
-                            <option value="languageFr ">Fr</option>
-                            <option value="languageEn ">En</option>
-                        </select>
-                    </li>
-                    <li> <button id="light " type="light " onclick="changemode(light) ">Light</button> </li>
-                    <li> <button id="dark " type="dark " onclick="changemode(dark) ">Dark</button> </li>
-                </ul>
-
-            </div>
-
-        </div>
-
-        <div class="slideshow " class="bigimage ">
-
-            <div class="mySlides fade ">
-                <img src="images/AdobeStock_284305436.jpeg " alt="sport image ">
-                <div class="text ">Caption Text</div>
-            </div>
-
-            <div class="mySlides fade ">
-                <img src="images/AdobeStock_163398716.jpeg " alt=" ">
-                <div class="text ">Caption Two</div>
-            </div>
-
-            <div class="mySlides fade ">
-                <img src="images/AdobeStock_172291957.jpeg " alt=" ">
-                <div class="text ">Caption Three</div>
-            </div>
-
-            <a class="prev " onmouseover="plusSlides(-1) ">&#10094;</a>
-            <a class="next " onmouseover="plusSlides(1) ">&#10095;</a>
         </div>
     </div>
 
-    <main>
 
 
-    </main>
-    <button class="open-button " id="open-button " onclick="openForm() ">Chat</button>
+    <button class="open-button" id="open-button" onclick="openForm()">CHAT TO AN EXPERT <br> let us know how we can
+        help!</button>
 
-    <div class="chat-popup " id="myForm ">
-        <form action="/action_page.php " class="form-container ">
+    <div class="chat-popup" id="myForm">
+        <form action="/action_page.php" class="form-container">
             <h1>Chat</h1>
 
-            <label for="msg "><b></b></label>
-            <textarea placeholder="Type message.. " name="msg " required></textarea>
+            <label for="msg"><b></b></label>
+            <textarea placeholder="Type message.." name="msg" required></textarea>
 
-            <button type="submit " class="btn ">Send</button>
-            <button type="button " class="btn cancel " onclick="closeForm() ">Close</button>
+            <button type="submit" class="btn">Send</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
         </form>
     </div>
 
     <footer>
-        <div class="subfooter ">
+        <div class="subfooter">
             <table>
-                <tr class="title ">
+                <tr class="title">
                     <td></td>
                     <td></td>
                 </tr>
-                <tr class="story ">
+                <tr class="story">
                     <td></td>
                     <td></td>
                 </tr>
             </table>
         </div>
-        <div class="footer ">
-            <div class="contact ">Contact Us</div>
-            <div class="FollowUs ">Follow Us</div>
+        <div class="footer">
+            <div class="contact">Contact Us</div>
+            <div class="FollowUs">Follow Us</div>
         </div>
     </footer>
 
 
-    <script src="code.js "></script>
+    <script src="code.js"></script>
 </body>
 
 
