--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -31,15 +31,17 @@
                         <li class=""><a href="">SHOES</a></li>
                         <li class=""><a href="">ACCESSORIES</a></li>
                         <li class=""><a href="">SALES</a></li>
-                          
+
                     </ul>
                 </div>
                 <div class="subheader" id="subheader">
                     <ul>
-                        <li class="searchArea"><a href="search">Search</a></li>
+                        <li class="searchArea">
+                        </li>
+
                         <li class="registration"><a href="register">Register</a></li>
                         <li class="logIn"><a href="log">Log In</a></li>
-                        <li class="cart"><a href="cart">Cart</a></li> 
+                        <li class="cart"><a href="cart">Cart</a></li>
                     </ul>
 
                 </div>
