--- a/khaproject/index1.html
+++ b/khaproject/index1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>8117-Team Canada</title>
     <link rel="stylesheet" href="index1.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
 <body>
@@ -36,7 +37,10 @@
                 </div>
                 <div class="subheader" id="subheader">
                     <ul>
-                        <li class="searchArea"><a href="search">Search</a></li>
+                        <li class="searchArea"><form action="" id="searchForm">
+                            <input type="search">
+                            <i class="fa fa-search"></i>
+                          </form></li>
                         <li class="registration"><a href="register">Register</a></li>
                         <li class="logIn"><a href="log">Log In</a></li>
                         <li class="cart"><a href="cart">Cart</a></li> 
